--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 bckp/
 images/
+
+*.FCStd1
 # For PCBs designed using KiCad: https://www.kicad.org/
 # Format documentation: https://kicad.org/help/file-formats/
 
